# sql-mpc-server

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  config.json  main.py  pyproject.toml
tools/: __init__.py  helper.py  model.py  server.py
