[project]
name = "sql-mpc-server"
version = "0.1.0"
description = "A FastAPI server for SQL MPC (Multi-Party Computation) using FastMCP and MCP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.9",
    "fastmcp>=2.4.0",
    "mcp[cli]>=1.9.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
]
authors = [
    { name = "Lim Phanith", email = "limphanith.dev@gmail.com" }
]
